Bug 385084 - PDF exports are always portrait
Summary: PDF exports are always portrait
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-26 13:10 UTC by spambucket
Modified: 2017-11-30 14:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spambucket 2017-09-26 13:10:26 UTC
Hello

I am using Plan 3.0.1 on Fedora 26 KDE Edition. I produced a small project plan for my thesis and tried to export it as a A4 landscape PDF. The document produced however is always portrait.

As work around I tried printing to a PDF via the printing Print -> Print to File (PDF), this produces the expected result, yielding a landscape document.

Pleas ask if there is more information needed.

Cheers
simon
Comment 1 Dag Andersen 2017-11-30 14:02:58 UTC
Git commit cb3e86ea990d4015a32f2b393a330bfc4a5d66e0 by Dag Andersen.
Committed on 30/11/2017 at 14:00.
Pushed by danders into branch 'master'.

Plan: Make changes to page layout persistent
Fixed-In:3.0.89

M  +5    -0    plan/kptview.cpp
M  +1    -0    plan/kptview.h
M  +4    -9    plan/libs/main/KoMainWindow.cpp
M  +0    -1    plan/libs/main/KoMainWindow.h
M  +5    -0    plan/libs/main/KoView.cpp
M  +5    -0    plan/libs/main/KoView.h

https://commits.kde.org/calligra/cb3e86ea990d4015a32f2b393a330bfc4a5d66e0