Plan: Make changes to page layout persistent

BUG:385084
Fixed-In:3.0.89