plan/libs/main/KoMainWindow.h
@@ -235,7 +235,6 @@ public Q_SLOTS:
     void slotFilePrintPreview();
 
     KoPrintJob* exportToPdf(const QString &pdfFileName = QString());
-    KoPrintJob* exportToPdf(const KoPageLayout &pageLayout, const QString &pdfFileName = QString());
 
     /**
      * Show a dialog with author and document information.
